# short-link

./: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  README.md  dockerfile
frontend/: index.html  index.js
includes/: database_service.hpp  http_connection.hpp  http_server.hpp  log_utils.hpp  request_handler.hpp  request_parser.hpp  response_handler.hpp  tcp_connection.hpp
src/: database_connection.cpp  http_connection.cpp  http_server.cpp  main.cpp  request_handler.cpp  tcp_connection.cpp
